RDM-12276 minor tweaks